load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "test.go",
        "utils.go",
    ],
    importpath = "kubevirt.io/kubevirt/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/v1:go_default_library",
        "//pkg/kubecli:go_default_library",
        "//pkg/log:go_default_library",
        "//vendor/github.com/google/goexpect:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/meta:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/fields:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/rand:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "console_test.go",
        "controller_leader_election_test.go",
        "registry_disk_test.go",
        "replicaset_test.go",
        "storage_test.go",
        "tests_suite_test.go",
        "vm_configuration_test.go",
        "vm_monitoring_test.go",
        "vm_userdata_test.go",
        "vmlifecycle_test.go",
        "vnc_test.go",
    ],
    deps = [
        ":go_default_library",
        "//pkg/api/v1:go_default_library",
        "//pkg/kubecli:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/virt-controller/leaderelectionconfig:go_default_library",
        "//pkg/virt-controller/services:go_default_library",
        "//vendor/github.com/google/goexpect:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/extensions/table:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/fields:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/json:go_default_library",
        "//vendor/k8s.io/client-go/tools/leaderelection/resourcelock:go_default_library",
    ],
)
