load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    container_repositories = "repositories",
)

container_image(
    name = "registry-disk-base",
    base = "@libvirt//image",
    cmd = ["/entry-point.sh"],
    files = [ "entry-point.sh" ],
)

container_image(
    name = "alpine-registry-disk-demo",
    base = ":registry-disk-base",
    tars = ["//:alpine-iso-tar"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "fedora-registry-disk-demo",
    base = ":registry-disk-base",
    tars = ["//:fedora-iso-tar"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "cirros-registry-disk-demo",
    base = ":registry-disk-base",
    tars = ["//:cirros-iso-tar"],
    visibility = ["//visibility:public"],
)
