load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
    "container_image",
    container_repositories = "repositories",
)
load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = ["virt-controller.go"],
    importpath = "kubevirt.io/kubevirt/cmd/virt-controller",
    visibility = ["//visibility:private"],
    deps = ["//pkg/virt-controller/watch:go_default_library"],
)

go_binary(
    name = "virt-controller",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

passwd_entry(
    name = "nonroot_user",
    home = "/home/virt-controller",
    info = "virt-controller",
    shell = "/bin/bash",
    uid = 1001,
    username = "virt-controller",
)

passwd_file(
    name = "passwd",
    entries = [
        ":nonroot_user",
    ],
)

pkg_tar(
    name = "passwd_tar",
    srcs = [":passwd"],
    mode = "0644",
    package_dir = "etc",
)

container_image(
    name = "passwd_image",
    base = "@fedora//image",
    tars = [":passwd_tar"],
    user = "virt-controller",
    visibility = ["//visibility:private"],
)

go_image(
    name = "virt-controller-image",
    base = ":passwd_image",
    binary = ":virt-controller",
    cmd = [""],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push-virt-controller",
    format = "Docker",
    image = ":virt-controller-image",
    registry = "localhost:5000",
    repository = "kubevirt/virt-controller",
    tag = "devel",
)
