load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    container_repositories = "repositories",
)

go_library(
    name = "go_default_library",
    srcs = ["virt-launcher.go"],
    importpath = "kubevirt.io/kubevirt/cmd/virt-launcher",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/v1:go_default_library",
        "//pkg/cloud-init:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/registry-disk:go_default_library",
        "//pkg/virt-handler/cmd-client:go_default_library",
        "//pkg/virt-launcher:go_default_library",
        "//pkg/virt-launcher/notify-client:go_default_library",
        "//pkg/virt-launcher/virtwrap:go_default_library",
        "//pkg/virt-launcher/virtwrap/cli:go_default_library",
        "//pkg/virt-launcher/virtwrap/cmd-server:go_default_library",
        "//pkg/virt-launcher/virtwrap/util:go_default_library",
        "//pkg/watchdog:go_default_library",
        "//vendor/github.com/libvirt/libvirt-go:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
    ],
)

go_binary(
    name = "virt-launcher",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "virt-launcher-sudoers-layer",
    base = "@libvirt//image",
    files = [
        "etc",
    ],
    mode = "0640",
    visibility = ["//visibility:private"],
)

container_image(
    name = "virt-launcher-scripts-layer",
    base = ":virt-launcher-sudoers-layer",
    files = [
        "entrypoint.sh",
        "libvirtd.sh",
        "sock-connector",
    ],
    visibility = ["//visibility:private"],
)

go_image(
    name = "virt-launcher-binary-layer",
    base = ":virt-launcher-scripts-layer",
    binary = ":virt-launcher",
    visibility = ["//visibility:private"],
)

container_image(
    name = "virt-launcher-image",
    base = ":virt-launcher-binary-layer",
    cmd = [""],
    entrypoint = ["/entrypoint.sh"],
    visibility = ["//visibility:public"],
    workdir = "/",
)
