load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["virtctl.go"],
    importpath = "kubevirt.io/kubevirt/cmd/virtctl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/virtctl:go_default_library",
        "//pkg/virtctl/console:go_default_library",
        "//pkg/virtctl/vnc:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
    ],
)

go_binary(
    name = "virtctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
