load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    container_repositories = "repositories",
)

container_image(
    name = "tgtd-disks",
    base = "@tgtd//image",
    tars = ["//:cirros-iso-tar", "//:alpine-iso-tar"],
)

container_image(
    name = "tgtd",
    base = ":tgtd-disks",
    cmd = ["/run-tgt.sh"],
    files = [ "run-tgt.sh" ],
    visibility = ["//visibility:public"],
)
