load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "deepcopy_generated.go",
        "defaults.go",
        "doc.go",
        "schema.go",
        "schema_swagger_generated.go",
        "types.go",
        "types_swagger_generated.go",
        "zz_generated.defaults.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/api/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/precond:go_default_library",
        "//vendor/github.com/pborman/uuid:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/meta:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apimachinery/announced:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apimachinery/registered:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "deepcopy_test.go",
        "defaults_test.go",
        "schema_test.go",
        "types_test.go",
        "v1_suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/google/gofuzz:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)
