load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "generated_mock_manager.go",
        "manager.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/virt-launcher/virtwrap",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/v1:go_default_library",
        "//pkg/cloud-init:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/registry-disk:go_default_library",
        "//pkg/virt-launcher/virtwrap/api:go_default_library",
        "//pkg/virt-launcher/virtwrap/cli:go_default_library",
        "//pkg/virt-launcher/virtwrap/errors:go_default_library",
        "//pkg/virt-launcher/virtwrap/util:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/libvirt/libvirt-go:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["manager_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/api/v1:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/virt-launcher/virtwrap/api:go_default_library",
        "//pkg/virt-launcher/virtwrap/cli:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/libvirt/libvirt-go:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/extensions/table:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["virtwrap_suite_test.go"],
    deps = [
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
