load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["console.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virtctl/console",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kubecli:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/golang.org/x/crypto/ssh/terminal:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)
