load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["vnc.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virtctl/vnc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kubecli:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
    ],
)
